// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files Component  should not render component with no files 1`] = `""`;

exports[`Files Component  should not render cultural message 1`] = `
<section>
  <StandardCard
    title="Files"
  >
    <div
      className="files"
    >
      <div
        className="header columns is-gapless is-vcentered is-mobile"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        />
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          File name
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          Description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          Size
        </div>
        <div
          className="column oa align-right is-2 is-vcentered is-hidden-mobile"
        />
      </div>
      <div
        className="data columns is-gapless is-vcentered is-mobile"
        key="file-0"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        >
          <Thumbnail
            fileName="web_image.jpg"
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
          />
        </div>
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          <FileName
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <Thumbnail
                fileName="web_image.jpg"
                mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          testing image description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          95.49 KB
        </div>
        <div
          className="column oa is-2 is-hidden-mobile is-vcentered"
        >
          <OpenAccessIcon
            embargoDate={null}
            isOpenAccess={true}
            openAccessStatusId={453695}
            showEmbargoText={false}
          />
        </div>
      </div>
    </div>
  </StandardCard>
</section>
`;

exports[`Files Component  should render alert for video files and firefox 1`] = `
<div
  className="help_outline alertWrapper "
>
  <div
    className="columns is-multiline is-mobile"
  >
    <div
      className="column is-narrow alertIcon"
    >
      <FontIcon
        className="material-icons"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        help_outline
      </FontIcon>
    </div>
    <div
      className="column alertText"
    >
      <div>
        <b>
          FireFox Users - 
        </b>
        Please RIGHT CLICK then select link SAVE AS option to save and play video files
      </div>
    </div>
  </div>
</div>
`;

exports[`Files Component  should render component 1`] = `
<section>
  <StandardCard
    title="Files"
  >
    <div
      className="files"
    >
      <div
        className="header columns is-gapless is-vcentered is-mobile"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        />
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          File name
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          Description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          Size
        </div>
        <div
          className="column oa align-right is-2 is-vcentered is-hidden-mobile"
        />
      </div>
      <div
        className="data columns is-gapless is-vcentered is-mobile"
        key="file-0"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        >
          <Thumbnail
            fileName="web_image.jpg"
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
          />
        </div>
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          <FileName
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <Thumbnail
                fileName="web_image.jpg"
                mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          testing image description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          95.49 KB
        </div>
        <div
          className="column oa is-2 is-hidden-mobile is-vcentered"
        >
          <OpenAccessIcon
            embargoDate={null}
            isOpenAccess={true}
            openAccessStatusId={453695}
            showEmbargoText={false}
          />
        </div>
      </div>
    </div>
  </StandardCard>
</section>
`;

exports[`Files Component  should render cultural message 1`] = `
<section>
  <StandardCard
    title="Files"
  >
    <Alert
      allowDismiss={true}
      dismissAction={[MockFunction]}
      dismissTitle="Click to dismiss this alert"
      message="hello"
      showLoader={false}
      type="info"
    />
    <div
      className="files"
    >
      <div
        className="header columns is-gapless is-vcentered is-mobile"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        />
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          File name
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          Description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          Size
        </div>
        <div
          className="column oa align-right is-2 is-vcentered is-hidden-mobile"
        />
      </div>
      <div
        className="data columns is-gapless is-vcentered is-mobile"
        key="file-0"
      >
        <div
          className="column filetype fileIcon is-narrow is-vcentered"
        >
          <Thumbnail
            fileName="web_image.jpg"
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
          />
        </div>
        <div
          className="column filename is-3-desktop is-4-tablet is-vcentered"
        >
          <FileName
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <Thumbnail
                fileName="web_image.jpg"
                mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </div>
        <div
          className="column description is-hidden-mobile is-vcentered"
        >
          testing image description
        </div>
        <div
          className="column size is-hidden-mobile is-hidden-tablet-only is-1 is-vcentered"
        >
          95.49 KB
        </div>
        <div
          className="column oa is-2 is-hidden-mobile is-vcentered"
        >
          <OpenAccessIcon
            embargoDate={null}
            isOpenAccess={true}
            openAccessStatusId={453695}
            showEmbargoText={false}
          />
        </div>
      </div>
    </div>
  </StandardCard>
</section>
`;

exports[`Files Component  should render icon for mimeType 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditorInsertDriveFile />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageImage />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvVideocam />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvVolumeUp />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 5`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImagePictureAsPdf />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 6`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Thumbnail
    fileName="test.tiff"
    mediaUrl="https://espace.library.uq.edu.au/view/UQ:1/test.tiff"
    mimeType="image/jpg"
    onClick={[Function]}
    previewMediaUrl="https://espace.library.uq.edu.au/view/UQ:1/preview_test.jpg"
    thumbnailFileName="thumbnail_test.jpg"
    thumbnailMediaUrl="https://espace.library.uq.edu.au/view/UQ:1/thumbnail_test.jpg"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <img
        alt="thumbnail_test.jpg"
        onError={[Function]}
        src="https://espace.library.uq.edu.au/view/UQ:1/thumbnail_test.jpg"
      />,
      "className": "fileThumbnail",
      "onClick": [Function],
      "onKeyPress": [Function],
      "title": "Click to open a preview of https://espace.library.uq.edu.au/view/UQ:1/test.tiff",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "thumbnail_test.jpg",
        "onError": [Function],
        "src": "https://espace.library.uq.edu.au/view/UQ:1/thumbnail_test.jpg",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <img
          alt="thumbnail_test.jpg"
          onError={[Function]}
          src="https://espace.library.uq.edu.au/view/UQ:1/thumbnail_test.jpg"
        />,
        "className": "fileThumbnail",
        "onClick": [Function],
        "onKeyPress": [Function],
        "title": "Click to open a preview of https://espace.library.uq.edu.au/view/UQ:1/test.tiff",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "thumbnail_test.jpg",
          "onError": [Function],
          "src": "https://espace.library.uq.edu.au/view/UQ:1/thumbnail_test.jpg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
